# scoresheet

./: README.md  example.json  scoresheet.cabal
src/: Main.hs
